[package]
name = "pwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
tempdir = "0.3.7"
